--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2c26bd92-eac9-4913-a3e5-d594b4085b32"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
